# me235b

./: .gitignore  AGENTS.md  lab2_NikosMynhierClareWu.py  lab3.py  main.py  pyproject.toml
.cursor/: README.md
.cursor/commands/: explain-detector.md  run-tests.md  smoke-cli.md
.cursor/docs/: subagents.md
.cursor/rules/: me235b-project.mdc  python-style.mdc
lab1/: .cursorignore  235lab3_clarewu.py  AGENTS.md  CLAUDE.md  pyproject.toml
lab1/.cursor/commands/: preflight-pr.md  smoke-cli.md  sync-environment.md
lab1/.cursor/rules/: lab1-project.mdc  python-style.mdc  tests.mdc
lab1/lab1/: __main__.py  cli.py  detector.py
lab1/tests/: test_detector.py
src/: __main__.py  cli.py  detector.py  drawing.py  grasp_from_tag.py  hanoi.py  kinematics.py  lab2.py  lab3.py  pyproject.toml  robot.py  sim.py  transforms.py
src/.cursor/: README.md
src/.cursor/commands/: explain-detector.md
src/.cursor/docs/: subagents.md
src/lab1/: cli.py  urdf_visualizer.py
tests/: test_auto_scan_points.py  test_camera_mount_ik.py  test_detector.py  test_grasp_from_tag.py  test_hanoi_strict.py  test_transforms.py
