[project]
name = "me235b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scipy>=1.16.0",
    "opencv-python",
    "rich>=13.3.3,<15.0.0",
    "typer>=0.24.1",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "yourdfpy",
    "viser>=1.0.18",
    "robot_descriptions",
    "pyliblzfse",
    "xacrodoc>=2.0.0",
]
[tool.uv]
package = true
[tool.setuptools]
package-dir = { "me235b" = "src" }
packages = ["me235b"]
[project.scripts]
detect = "me235b.cli:app"
